--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <!--  Short Icon  -->
     <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/128/3665/3665909.png" type="image/x-icon">
     <title>Abdusamad</title>
