some bugs changed

--- a/index.html
+++ b/index.html
@@ -221,14 +221,14 @@
               href="https://www.instagram.com/abdusamadweb"
               target="_blank"
             >
-              instagram.com/01samad_
+              instagram.com/abdusamadweb
             </a>
             <a
               class="contact__text-link telegram footer__link linkk"
               href="https://t.me/abdusamadweb"
               target="_blank"
             >
-              t.me/abdusamadpro
+              t.me/abdusamadweb
             </a>
           </div>
           <div class="footer__logos">
