some bugs changed

--- a/index.html
+++ b/index.html
@@ -192,12 +192,12 @@
                 Voluptate dolores, quasi unde quisquam facilis at ullam aperiam
                 similique dicta voluptatibus!
               </p>
-              <a class="contact__text-link tell" href="tel:997262347"
+              <a class="contact__text-link tell" href="tel:+998330012223"
                 >+998 33 001 22 23</a
               >
               <a
                 class="contact__text-link email"
-                href="mailto: xusandadjonov4385@gmail.com"
+                href="mailto: abdusamadweb@gmail.com"
                 >abdusamadweb@gmail.com</a
               >
             </div>
